2006-04-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py (MediaView.add): Fix call to AddMedia
	* src/ViewManager.py: add ScratchPad to the View menu
	* src/Editors/_EditFamily.py: Fix tooltips
	* src/glade/gramps.glade: remove predefined tooltips
	* src/AutoComp.py (StandardCustomSelector.fill): handle unicode
	in addition to str
	* src/ScratchPad.py (ScratchPadWindow.__init__): fix call to
	set_window, passing proper arguments

2006-04-28  Alex Roitman  <shura@gramps-project.org>
	* src/ScratchPad.py (ScratchPadWindow.__init__): Allow only one
	instance; translate label; remove unneeded event handlers.
	* src/ViewManager.py (ViewManager.scratchpad): Catch exception.
	(ViewManager._init_lists): Translate menu labels.

2006-04-27  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.build_plugin_menu): Use unique
	command-line name for action menu.
	* src/plugins/GraphViz.py: Fix report.
	* src/PluginUtils/_PluginMgr.py (_register_standalone): Remove
	unneeded import.
	* src/PluginUtils/_Plugins.py (build_tools_menu, build_report_menu,
	build_plugin_menu, by_menu_name): Remove functions already
	re-implemented in ViewManager.
	* src/plugins/EventCmp.py: Correct button label.
	* src/plugins/StatisticsChart.py: Fix report.

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: fix custom event storing
	* src/GrampsDb/_GrampsBSDDB.py: fix custom event storing
	* src/Editors/_EditEventRef.py: fix custom event storing
	* src/Editors/_EditEvent.py: fix custom event storing
	* src/GrampsWidgets.py: fix custom data types
	* src/AutoComp.py: fix custom data types
	
2006-04-27  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenSpreadSheet.py: fix manifest so files open in calc

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditReference.py: fix warn_box call
	* src/DisplayTabs.py: handle canceled edit box for media
	* src/AddMedia.py: ManagedWindow support